--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<h4 class="col-xs-12 result">
 				Foram testadas 5 imagens.
 				<br>
-	 			<b>GOOGLE LENS</b> previou 4 delas corretamente, e o <b>MOBILENET</b> foi menos preciso.<br>
+	 			<b>GOOGLE LENS</b> previu 4 delas corretamente, e o <b>MOBILENET</b> foi menos preciso.<br>
 	 			Então, de acordo com esse estudo de caso, o <b>GOOGLE LENS</b> é o modelo mais preciso.
 			</h4>
 
